--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "next": "14.2.3",
     "nookies": "^2.5.2",
